# Iron-Fall

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  start.md  web_client.html
backend/: __init__.py
backend/agent/: __init__.py  agent.py  case_library.py  chimney_parser.py  demo.py  multi_agent.py  parser.py  prompt.py  prompts_v4.py  tools.py  tools_v4.py  v3_demo.py  v4_demo.py
backend/agent/knowledge/: README.md  __init__.py  demolition_regulations.txt  vectorstore.py
backend/api/: __init__.py  main.py
backend/core/: __init__.py  enums.py  models.py
backend/engine/: __init__.py  anastruct_adapter.py  base.py  chimney_analyzer.py  chimney_opensees.py  deep_analysis.py  force_visualizer.py  frame3dd.py  opensees.py  precompute.py  report_generator.py  rl_agent.py  rl_environment.py  sequencer.py  xai_analyzer.py
backend/tests/: __init__.py  conftest.py  test_anastruct.py  test_chimney.py  test_frame3dd.py  test_multi_agent.py  test_parser.py  test_rl.py  test_sequencer.py  test_xai.py
backend/tests/agent/: test_agent.py  test_tools.py  test_tools_v4.py  test_vectorstore.py
backend/tests/api/: __init__.py  test_rest_endpoints.py  test_websocket.py
backend/tests/e2e/: __init__.py  test_v1_pipeline.py  test_v3_pipeline.py  test_v4_pipeline.py
backend/tests/engine/: __init__.py  test_deep_analysis.py
backend/tests/performance/: test_latency.py
backend/tests/unit/: __init__.py  test_enums.py  test_force_visualizer.py  test_installation.py  (+3 more)
backend/utils/: __init__.py
docs/: API.md
frontend_unity/: LICENSE
(+12 files in other folders)
